# ShellMate-

./: .env.example  README.md  dblogging.py  functiondeclarations.js  gemini.py  index.js  main.py  package.json  pyproject.toml  system_prompt.py  systeminstruction.js  tools.js  tools.py
